<resources>
    <string name="app_name">PurLite</string>
    <string name="zaban">(EN)تغییر زبان</string>
    <string name="enseraf">انصراف</string>
    <string name="stay">ماندن همین صفحه</string>
    <string name="notset">منصرف شدید</string>
    <string name="khata">خطا رخ داد</string>
    <string name="sabt">ثبت تغییرات</string>
    <string name="save">ذخیره</string>
    <string name="doyoudo">چه کاری انجام میدی؟</string>
    <string name="daryaft">در حال دریافت</string>
    <string name="notconnect">" متصل نیست"</string>
    <string name="retry">مجدد</string>
    <string name="wait">صبر کنید</string>
    <string name="testing">در حال تست</string>
    <string name="ping">پینگ:</string>
    <string name="ebteda">ابتدا متصل شوید</string>
    <string name="connected">متصل شد</string>
    <string name="servertest">در حال تست سرورها</string>
    <string name="selectserver">در حال انتخاب سرور</string>
    <string name="update">بروزرسانی</string>
    <string name="dastras">آپدیت در دسترس</string>
    <string name="Dwnload">دانلود</string>
    <string name="tabrik">تبریک میگم</string>
    <string name="beruz">شما بروز هستید</string>
    <string name="connecting">در حال اتصال</string>
    <string name="makhzan">متصل به مخازن</string>
    <string name="barresi">در حال بررسی سرور ها</string>
    <string name="khatad">خطا در دریافت</string>
    <string name="moj">مجدد متصل شو</string>
    <string name="khatta">خطا در اتصال</string>
    <string name="github">گیت هاب</string>
    <string name="Splite">تونل نرم افزارها</string>
    <string name="pay">حمایت از توسعه دهنده</string>
    <string name="lang">تغییر زبان</string>
    <string name="testserver">تست سرور</string>
    <string name="robat">ربات تلگرامی</string>
    <string name="stayhere">" در همین صفحه بمانید ...."</string>
    <string name="exit">برای خروج دوباره فشار دهید</string>
    <string name="beruzzz">بروز نیستید:</string>
    <string name="isberuz">بروز هستید:</string>
    <string name="check">بررسی آپدیت</string>
    <string name="searchapp">جستجوی نرم افزار</string>
    <string name="whyapp">اینجا هر نرم افزاری که تیک بزنین و ذخیره کنین وی پی آن روش تاثیر ندارد.نرم افزارهایی که به فیلترشکن ندارن نیاز دارند را به نیاز خود تیک و ذخیره کنین ببندید.بصورت پیشفرض جدید تیک دار شدن</string>
    <string name="sabr"> کمی صبر کنین....</string>
    <string name="badan">بعدا</string>
    <string name="nashod">اعمال نشد</string>
    <string name="nashod2">ذخیره شد</string>


</resources>