<!-- res/menu/options_menu.xml -->
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/memll2"
        app:showAsAction="always"
        android:icon="@drawable/win"
        tools:ignore="MenuTitle">

        <menu>
    <item
        android:id="@+id/tel"
        android:orderInCategory="100"
        android:icon="@drawable/tel"
        android:title="@string/robat"



        app:showAsAction="collapseActionView"
        tools:ignore="MenuTitle" />
    <item
        android:id="@+id/gith"
        android:orderInCategory="100"
        android:icon="@drawable/gitpic"
        android:title="@string/github"


        app:showAsAction="collapseActionView"
        tools:ignore="MenuTitle" />

            <item
                android:id="@+id/lang"
                android:orderInCategory="100"
                android:icon="@drawable/langgg"
                android:title="@string/lang"


                app:showAsAction="collapseActionView"
                tools:ignore="MenuTitle" />


    <item
        android:id="@+id/splite"
        android:orderInCategory="100"
        android:icon="@drawable/sp"

        android:title="@string/Splite"

        app:showAsAction="collapseActionView"
        tools:ignore="MenuTitle" />
    <item
        android:id="@+id/updaate"
        android:orderInCategory="100"
        android:icon="@drawable/down"
        android:title="@string/update"


        app:showAsAction="collapseActionView"
        tools:ignore="MenuTitle" />

            <item
                android:id="@+id/pay"
                android:orderInCategory="100"
                android:icon="@drawable/ffk"
                android:title="@string/pay"


                app:showAsAction="collapseActionView"
                tools:ignore="MenuTitle" />
        </menu>
    </item>
</menu>